fixed alignment in our story

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -243,7 +243,6 @@ body {
   height: 225px;
   border: 5px solid #ffe699;
   border-radius: 50%;
-  margin-left: 50px;
 }
 
 .kelsey-story-section img {
